# InfiniteCode

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.ja.md  README.md  README.ru.md  README.zh-Hans.md  README.zh-Hant.md  install.ps1  install.sh  package.json
crates/arg0/: Cargo.toml  README.md
crates/arg0/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: agent_command.rs  auth_command.rs  auth_supabase.rs  doctor_command.rs  main.rs  prompt_command.rs  upgrade_command.rs
crates/cli/src/prompt_command/: prompt_routing_tests.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: acp_fs.rs  acp_permissions.rs  acp_terminal.rs  client_core.rs  events.rs  lib.rs  protocol_trace.rs  stdio.rs  websocket.rs
crates/client/tests/: websocket_client.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: app.rs  app_store_tests.rs  experimental.rs  hooks.rs  lib.rs  logging.rs  mcp.rs  oauth.rs  provider.rs  research.rs  server.rs  tests.rs  tools.rs
crates/config/src/provider/: auth.rs  persistence.rs  resolve.rs  schema.rs
crates/core/: Cargo.toml  README.md  default_base_instructions.txt  models.json
crates/core/prompts/agent-behavior/: audit-changes.md  explore-solutions.md  suggest-followups.md  verify-solution.md
crates/core/prompts/collaboration-mode/: plan.md
crates/core/prompts/research/: clarify.md  compress.md  final_report.md  research_brief.md  researcher.md  subagent.md  summarize_webpage.md  supervisor.md  system.md
crates/core/src/: agent_behavior_prompts.rs  collaboration_mode_prompts.rs  config_resolution.rs  context_pipeline.rs  durable_record.rs  execution.rs  fork.rs  goal_prompts.rs  gravity.rs  hooks.rs  instruction_discovery.rs  jsonl_store.rs  lib.rs  logging.rs  mcp.rs  memory.rs  message_edit.rs  model_binding.rs  model_catalog.rs  model_preset.rs  permission.rs  query.rs  replay.rs  response_item.rs  session.rs  session_lock.rs  session_store.rs  skills.rs  update_check.rs
crates/core/src/context/: agents_md.rs  context_changes.rs  execution_context.rs  mod.rs  turn_aborted.rs
crates/core/src/conversation/: mod.rs  records.rs
crates/core/src/history/: compaction.rs  context_insertion.rs  mod.rs  normalize.rs  summarizer.rs
crates/core/src/hooks/: command.rs
crates/core/src/research/: prompts.rs
crates/core/src/state/: turn.rs
crates/core/src/tools/: apply_patch.rs  background_tasks.rs  bash.txt  client_terminal_shell.rs  deferred_loading.rs  edit.txt  glob.txt  grep.txt  hook_events.rs  mod.rs  read.rs  registry.rs  registry_plan.rs  router.rs  shell_exec.rs  websearch.txt  websearch_prompt.rs
crates/core/tests/: message_edit_rollout_lines.rs  permission_access.rs  real_llm_e2e.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  manager.rs
crates/network-proxy/: Cargo.toml  README.md
crates/network-proxy/src/: lib.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/bindings/: ProviderRetryPhase.ts  TurnProviderRetryStatusPayload.ts
crates/protocol/src/: acp.rs  acp_auth.rs  acp_capabilities.rs  acp_client_io.rs  acp_common.rs  acp_content.rs  acp_event_to_update.rs  acp_ids.rs  acp_schema_aliases.rs  acp_session.rs  acp_session_config.rs  acp_session_mode.rs  acp_session_update.rs  acp_ts.rs  agent.rs  approval.rs  conversation.rs  coordination.rs  event.rs  goal.rs  hosted_tools.rs  lib.rs  model.rs  protocol.rs  provider_vendor.rs  request_normalize.rs  request_user_input.rs  response.rs  role.rs  session.rs  slash_command.rs  thinking.rs  turn.rs
crates/protocol/tests/: acp_ts_generation.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: dsml.rs  error.rs  hosted_tools.rs  http.rs  lib.rs  provider.rs  request.rs  router.rs  text_normalization.rs
crates/provider/src/anthropic/: messages.rs  mod.rs  role.rs  stream_usage.rs
crates/provider/src/openai/: capabilities.rs  chat_completions.rs  error_payload.rs  responses.rs  role.rs  shared.rs
crates/provider/tests/: openai_chat_completions_stream.rs  openai_responses_stream.rs  provider_http.rs
crates/server/: AGENTS.md  Cargo.toml
crates/server/src/: approval.rs  approval_reviewer.rs  auth_supabase.rs  bootstrap.rs  client.rs  connection.rs  db.rs  db_freebuff.rs  db_infinitecode.rs  event.rs  execution.rs  goal.rs  goal_durable.rs  lib.rs  persistence.rs  projection.rs  protocol.rs  provider_config.rs  runtime.rs  server_tray.rs  session.rs  session_context.rs  singleton.rs  subagent.rs  titles.rs  tool_actions.rs  transport.rs  transport_http.rs  turn.rs
crates/server/src/http/: ads.rs  auth.rs  error.rs  healthz.rs  mod.rs  search.rs  session.rs  state.rs  tokens.rs
crates/server/src/runtime/: acp_fs.rs  acp_terminal.rs  active_turn.rs  agents.rs  approval.rs  code_index_warmup.rs  command_exec.rs  connection.rs  goal_accounting.rs  goal_continuation.rs  goal_handlers.rs  handlers.rs  hooks.rs  items.rs  lifecycle.rs  model_api.rs  outbound.rs  proposed_plan.rs  provider_vendor_api.rs  reference_search.rs  research.rs  research_stages.rs  research_tool_runtime.rs  research_tools.rs  (+7 more)
crates/server/tests/: README.md  acp_available_commands.rs  acp_initialization_e2e.rs  acp_permission_tool_status_contract.rs  acp_session_contract_e2e.rs  acp_session_delete.rs  acp_session_lifecycle.rs  cli_log_failures.rs  command_exec.rs  deep_research_boundary_failure.rs  deep_research_e2e.rs  end_to_end.rs  goal_continuation.rs  goal_continuation_guards.rs  goal_lifecycle_interrupts.rs  goal_title_generation.rs  http_coordination.rs  model_config_e2e.rs  persistence_resume.rs  protocol_contract.rs  provider_failure_reporting.rs  provider_routing.rs  session_fork_persistence.rs  session_rollback_persistence.rs  skills_integration.rs  subagent_lifecycle.rs  turn_start_persistence.rs  unified_exec_tool_e2e.rs  websocket_client_e2e.rs
crates/utils/: Cargo.toml
crates/utils/fuzzy/: Cargo.toml
crates/utils/git/: Cargo.toml
crates/utils/paths/: Cargo.toml
crates/utils/process/: Cargo.toml
crates/utils/shell-command/: Cargo.toml
crates/utils/src/: lib.rs
(+944 files in other folders)
