[package]
description = "CLI entry point that assembles all crates"
edition.workspace = true
license.workspace = true
name = "infinitecode-cli"
version.workspace = true

[[bin]]
name = "infinitecode"
path = "src/main.rs"

[dependencies]
infinitecode-core = { workspace = true }
infinitecode-mcp = { workspace = true }
infinitecode-protocol = { workspace = true }
infinitecode-provider = { workspace = true }
infinitecode-safety = { workspace = true }
infinitecode-server = { workspace = true }
infinitecode-tasks = { workspace = true }
infinitecode-tui = { workspace = true }
infinitecode-util-paths = { workspace = true }
infinitecode-arg0 = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
tokio-console = ["infinitecode-arg0/tokio-console"]

[dev-dependencies]
pretty_assertions = "1"
