[package]
description = "Client transports for the InfiniteCode server protocol"
edition.workspace = true
license.workspace = true
name = "infinitecode-client"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
infinitecode-protocol = { workspace = true }
infinitecode-util-paths = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
