[package]
description = "Message model, session state, and agent main loop"
edition.workspace = true
license.workspace = true
name = "infinitecode-core"
version.workspace = true

[features]
default = ["code-search"]
# Semantic code search tool (`code_search`). Optional because it pulls in heavy
# dependencies (tokenizers, model2vec, hf-hub/hf-xet, hnsw_rs and the full
# tree-sitter grammar set). Disable with `--no-default-features` for a slim
# build that omits the entire code-search stack.
code-search = ["dep:infinitecode-code-search"]

[dependencies]
infinitecode-config = { workspace = true }
infinitecode-code-search = { workspace = true, optional = true }
infinitecode-network-proxy = { workspace = true }
infinitecode-protocol = { workspace = true }
infinitecode-provider = { workspace = true }
infinitecode-safety = { workspace = true }
infinitecode-skills = { workspace = true }
infinitecode-tools = { workspace = true }
infinitecode-util-process = { workspace = true }
infinitecode-util-paths = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
bm25 = { workspace = true }
chrono = { workspace = true }
diffy = { workspace = true }
futures = { workspace = true }
iana-time-zone = { workspace = true }
portable-pty = "0.9"
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
infinitecode-provider = { workspace = true }
infinitecode-safety = { workspace = true }
futures = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
