[package]
description = "MCP client, connection, discovery, and reconnect"
edition.workspace = true
license.workspace = true
name = "devo-mcp"
version.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true, features = [
    "client",
    "macros",
    "schemars",
    "server",
    "transport-child-process",
] }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
