[package]
description = "RMCP-backed MCP runtime adapter"
edition.workspace = true
license.workspace = true
name = "infinitecode-mcp"
version.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
infinitecode-config = { workspace = true }
infinitecode-core = { workspace = true }
infinitecode-rmcp-client = { workspace = true }
rmcp = { workspace = true, features = [
    "client",
    "macros",
    "schemars",
    "server",
    "transport-child-process",
] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
