[package]
description = "Network proxy helpers for InfiniteCode HTTP clients"
name = "infinitecode-network-proxy"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "infinitecode_network_proxy"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
