[package]
description = "Unified model provider interface with streaming support"
edition.workspace = true
license.workspace = true
name = "infinitecode-provider"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
infinitecode-network-proxy = { workspace = true }
infinitecode-protocol = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
