[package]
description = "Transport-neutral runtime protocol types and server contracts"
edition.workspace = true
license.workspace = true
name = "infinitecode-server"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http1", "json", "tokio"] }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
infinitecode-client = { workspace = true }
infinitecode-code-search = { workspace = true }
infinitecode-core = { workspace = true }
infinitecode-config = { workspace = true }
infinitecode-file-search = { workspace = true }
infinitecode-mcp = { workspace = true }
infinitecode-protocol = { workspace = true }
infinitecode-provider = { workspace = true }
infinitecode-safety = { workspace = true }
infinitecode-util-fuzzy = { workspace = true }
infinitecode-util-git = { workspace = true }
infinitecode-util-paths = { workspace = true }
infinitecode-util-shell-command = { workspace = true }
diffy = { workspace = true }
futures = { workspace = true }
fs2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = "1"
reqwest = { workspace = true }
tempfile = "3"
