[package]
description = "Shared filesystem and path helpers for runtime bootstrap"
edition.workspace = true
license.workspace = true
name = "devo-utils"
version.workspace = true

[dependencies]
ansi-to-tui = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
devo-protocol = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
once_cell = { workspace = true }
portable-pty = "0.9"
ratatui = { workspace = true, features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

[target.'cfg(windows)'.dependencies]
filedescriptor = "0.8.3"
lazy_static = { workspace = true }
log = "0.4"
shared_library = "0.1.9"
winapi = { version = "0.3.9", features = [
    "handleapi",
    "minwinbase",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "wincon",
    "winerror",
    "winnt",
] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
