[package]
description = "Path and InfiniteCode home helpers"
edition.workspace = true
license.workspace = true
name = "infinitecode-util-paths"
version.workspace = true

[lib]
name = "infinitecode_util_paths"
path = "src/lib.rs"

[dependencies]
dirs = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
