[package]
description = "Process, pipe, and PTY helpers"
edition.workspace = true
license.workspace = true
name = "infinitecode-util-process"
version.workspace = true

[lib]
name = "infinitecode_util_process"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
portable-pty = "0.9"
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[target.'cfg(windows)'.dependencies]
filedescriptor = "0.8.3"
lazy_static = { workspace = true }
log = "0.4"
shared_library = "0.1.9"
winapi = { version = "0.3.9", features = [
    "handleapi",
    "minwinbase",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "wincon",
    "winerror",
    "winnt",
] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
